force-app/main/default/objects/Pricing_Request__c/fields/Source_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Code__c</fullName>
    <formula>if (LEFT(Cost_Source__c, 1)==&quot;W&quot;,&quot;WM&quot;,if (LEFT(Cost_Source__c, 1)==&quot;3&quot;,&quot;3PS&quot;,&quot;&quot;))</formula>
    <label>Source Code</label>
    <type>Text</type>
</CustomField>