force-app/main/default/objects/Pricing_Request__c/fields/Timeout_Error__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is only for POC purpose will be deleted once integration is in place.</description>
    <label>Timeout Error</label>
    <type>Checkbox</type>
</CustomField>