force-app/main/default/objects/Pricing_Request__c/fields/Tons_Haul__c.field-meta.xml
<CustomField>
    <fullName>Tons_Haul__c</fullName>
    <label>Tons/Haul</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>