force-app/main/default/objects/Pricing_Request__c/fields/Vendor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Comments__c</fullName>
    <description>Adding this field to store Vendor comments for the story 23393</description>
    <label>Vendor Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>