force-app/main/default/objects/Pricing_Request__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <description>Need to check Vendor ID as External ID on Account object, to make this as a lookup.</description>
    <label>Vendor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>