force-app/main/default/objects/Pricing_Request__c/fields/Zone_Type__c.field-meta.xml
<CustomField>
    <fullName>Zone_Type__c</fullName>
    <label>Zone Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>