force-app/main/default/objects/Pricing_Request__c/validationRules/Location_belong_to_client.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_belong_to_client</fullName>
    <active>false</active>
    <errorConditionFormula>Account__c !=  Location__r.ParentId</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>Please select location that belongs to Client</errorMessage>
</ValidationRule>